--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             width: 1250px;
             height: auto;
             margin: auto;
+            font-size: large;
         }
 
         ul {
