adding city options

--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
         #email,
         #number,
         #password,
-        #dateofbirth {
+        #dateofbirth,
+        city {
             margin-top: 5px;
             width: 250px;
         }
@@ -134,6 +135,13 @@
                         placeholder="Enter your email"></label>
                 <label for="dateofbirth">Date of birth: <br><input type="date" name="date" id="dateofbirth"></label>
                 <label for="number">Number: <br> <input type="number" id="number" placeholder="Phone number"></label>
+                <label for="city">Your City: <br> <select style="width: 250px;" name="city" id="city">
+                        <option value="Dhaka">Dhaka</option>
+                        <option value="Comilla">Comilla</option>
+                        <option value="Sylet">Sylet</option>
+                        <option value="Rajshahi">Rajshahi</option>
+                        <option value="Rongpur">Rongpur</option>
+                    </select></label>
                 <label for="password">password: <br> <input type="password" id="password"
                         placeholder="password"></label>
                 <fieldset>
