--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             width: 1250px;
             height: auto;
             margin: auto;
-            font-size: large;
+            font-size: larger;
         }
 
         ul {
