adding required attribute.

--- a/index.html
+++ b/index.html
@@ -129,10 +129,10 @@
 
             <form action="">
                 <label for="name"> Your Name: <br>
-                    <input id="name" type="text" placeholder="Enter your name">
+                    <input id="name" type="text" placeholder="Enter your name" required>
                 </label>
-                <label for="email">Your Email: <br><input id="email" type="email"
-                        placeholder="Enter your email"></label>
+                <label for="email">Your Email: <br><input id="email" type="email" placeholder="Enter your email"
+                        required></label>
                 <label for="dateofbirth">Date of birth: <br><input type="date" name="date" id="dateofbirth"></label>
                 <label for="number">Number: <br> <input type="number" id="number" placeholder="Phone number"></label>
                 <label for="city">Your City: <br> <select style="width: 250px;" name="city" id="city">
@@ -142,8 +142,8 @@
                         <option value="Rajshahi">Rajshahi</option>
                         <option value="Rongpur">Rongpur</option>
                     </select></label>
-                <label for="password">password: <br> <input type="password" id="password"
-                        placeholder="password"></label>
+                <label for="password">password: <br> <input type="password" id="password" placeholder="password"
+                        required></label>
                 <fieldset>
                     <legend>What is your gender? </legend>
                     <label for="male"> <input type="radio" name="gender" id="male">Male
